--- a/index.html
+++ b/index.html
@@ -16,19 +16,12 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script type="text/javascript" src="particles.js"></script>
   <script type="text/javascript" src="app.js"></script>
-  <script>
-  //   $(window).scroll(function(){
-  //     $('nav').toggleClass('scrolled', $(this).scrollTop() > 50);
-  
-  //  });
-  //}
-  </script>
 </head>
 <body>
 <div id="content-wrapper" >
-   <header class="header header--bg">
-    <div class="container">
-      <nav class="navbar navbar-fixed-top" style="background-color:rgb(132,96,242,0.6);">
+   <header class="header header--bg" id="home">
+    <div class="container header-container">
+      <nav class="navbar navbar-fixed-top navbar_scroll"  style="background-color:rgb(132,96,242,0.6);">
         <div class="navbar-header">
           <a class="navbar-brand" href="#home">
             <img src="images/logo4.png" height="80" width="80">
@@ -45,6 +38,7 @@
             <li><a href="#home">HOME</a></li>
             <li><a href="#about">ABOUT</a></li>
             <li><a href="#skill">SKILL</a></li> 
+            <li><a href="#project">PROJECTS</a>
             <li><a href="#education">EDUCATION</a></li>
             <li><a href="#contact">CONTACT</a></li> 
           </ul>
@@ -86,12 +80,12 @@
               <div class="row row--margin-top">
                 <div class="col-md-4">
                   <p class="about__bio"><strong>NAME :</strong> Nikitha Malkapuram</p>
-                  <p class="about__bio"><strong>AGE :</strong> 20</p>
+                  <p class="about__bio"><strong>AGE :</strong> 21</p>
                     <a class="header__button" href="files/nikithamalkapuram.pdf" download>Download My Resume</a>
                 </div>
                 <div class="col-md-4">
                   <p class="about__bio"><strong>JOB TITLE :</strong> UI Designer</p>
-                  <p class="about__bio"><strong>LOCATION :</strong> Hyderabad,India</p>
+                  <p class="about__bio"><strong>LOCATION :</strong> Hyderabad,Telangana</p>
                 </div>
               </div>
               <div class="row">
@@ -113,7 +107,7 @@
       <div class="page-section">
         <h2 class="page-section__title page-section__title--white">MY SKILLS</h2>
         <img class="page-section__title-style" src="assets/images/title-style-white.png" alt="">
-        <p class="page-section__paragraph page-section__paragraph--white">This are my sills.</p>
+        <p class="page-section__paragraph page-section__paragraph--white">These are my skills.</p>
         <div class="row gutters-60">
           <div class="col-md-3">
             <div class="thumbnail text-center  first animate__animated animate__zoomIn animate__delay-2s">
@@ -305,7 +299,7 @@
   <!-- Skills Ended -->
 
   <!-- Projects Section Start -->
-  <section class="service" id="education">
+  <section class="service" id="project">
     <div class="container">
       <div class="page-section">
         <h2 class="page-section__title">PROJECTS</h2>
@@ -314,36 +308,101 @@
         <div class="row gutters-70">
           <div class="col-md-4">
             <div class="thumbnail text-center">
-              <img src="images/graduate.png" alt="" height="200" width="200" style="margin-top: -10px;">
-              <h4 class="service__single-section__title" >WEATHER APPLICATION</h4>
+              <!-- <img src="images/graduate.png" alt="" height="200" width="200" style="margin-top: -10px;"> -->
+              <h4 class="service__single-section__title" >COURSIFY</h4>
               <ul class="text-justify">
-                <li>1.This is built by open weather map api.</li> 
-                <li>2.This application built in React.js. </li>
+                <li>1.This is online educatin website.</li> 
+                <li>2.Technologies used:HTML,CSS,Bootstrap,JavaScript</li>
               </ul><hr>
               <button class="btn btn-danger">
-                <a href="https://github.com/nikitha26" style="color: white;">GITHUB</a>
+                <a href="https://github.com/nikitha26/Coursify" target="_blank" style="color: rgb(255, 246, 246);">GITHUB</a>
                 </button>
-              <button class="btn btn-primary">LIVE DEMO</button>
+              <button class="btn btn-primary">
+                <a href="https://coursify-nikitha.netlify.app/" target="_blank" style="color: white;">LIVE DEMO</a>
+              </button>
             </div> 
           </div>
           <div class="col-md-4">
             <div class="thumbnail text-center">
-              <img src="images/school.png" alt="" height="200" width="200" style="margin-top: -10px;">
-              <h4 class="service__single-section__title">HIGHER SECONDARY</h4>
-              <p class="about__edu"><strong>GROUP :</strong> (MPC) Maths Physics Chemisty</p>
-              <p class="about__edu"><strong>YEAR :</strong> 2015-2017</p> 
-              <p class="about__edu"><strong>PERCENTAGE :</strong> 78%</p> 
-              <p class="about__edu"><strong>COLLEGE NAME :</strong>Sri Chaitanya Bharathi Junior College,(Chandanagar)</p>
+              <!-- <img src="images/school.png" alt="" height="200" width="200" style="margin-top: -10px;"> -->
+              <h4 class="service__single-section__title" >LEARN MUSIC</h4>
+              <ul class="text-justify">
+                <li></li> 
+                <li></li>
+              </ul><hr>
+              <button class="btn btn-danger">
+                <a href="https://github.com/nikitha26/Learn-Music" target="_blank" style="color: rgb(255, 246, 246);">GITHUB</a>
+                </button>
+              <button class="btn btn-primary">
+                <a href="https://learnmusic-nikitha.netlify.app/" target="_blank" style="color: white;">LIVE DEMO</a>
+              </button>
             </div>
           </div>
           <div class="col-md-4">
             <div class="thumbnail text-center">
-              <img src="images/clg.png" alt="" height="200" width="200" style="margin-top: -10px;">
-              <h4 class="service__single-section__title">HIGH SCHOOL</h4>
-              <p class="about__edu"><strong>SYLLABUS :</strong> CBSE</p> 
-              <p class="about__edu"><strong>YEAR :</strong> 2014-2015</p> 
-              <p class="about__edu"><strong>PERCENTAGE :</strong> 77%</p> 
-              <p class="about__edu"><strong>SCHOOL NAME :</strong>ZPHS High School, (Kondapur)</p>&nbsp;&nbsp;
+              <!-- <img src="images/clg.png" alt="" height="200" width="200" style="margin-top: -10px;"> -->
+              <h4 class="service__single-section__title" >RANDOM USER API</h4>
+              <ul class="text-justify">
+                <li></li> 
+                <li></li>
+              </ul><hr>
+              <button class="btn btn-danger">
+                <a href="https://github.com/nikitha26/Random-User-API" target="_blank" style="color: rgb(255, 246, 246);">GITHUB</a>
+                </button>
+              <button class="btn btn-primary">
+                <a href="https://nikitha26.github.io/Random-User-API/" target="_blank" style="color: white;">LIVE DEMO</a>
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div class="row gutters-70">
+          <div class="col-md-4">
+            <div class="thumbnail text-center">
+              <!-- <img src="images/graduate.png" alt="" height="200" width="200" style="margin-top: -10px;"> -->
+              <h4 class="service__single-section__title" >WEATHER APPLICATION</h4>
+              <ul class="text-justify">
+                <li></li> 
+                <li></li>
+              </ul><hr>
+              <button class="btn btn-danger">
+                <a href="https://github.com/nikitha26" target="_blank" style="color: rgb(255, 246, 246);">GITHUB</a>
+                </button>
+              <button class="btn btn-primary">
+                <a href="https://nikitha26.github.io/weather-app/" target="_blank" style="color: white;">LIVE DEMO</a>
+              </button>
+            </div> 
+          </div>
+          <div class="col-md-4">
+            <div class="thumbnail text-center">
+              <!-- <img src="images/school.png" alt="" height="200" width="200" style="margin-top: -10px;"> -->
+              <h4 class="service__single-section__title" >TIC-TAC-TOE</h4>
+              <ul class="text-justify">
+                <li></li> 
+                <li></li>
+              </ul><hr>
+              <button class="btn btn-danger">
+                <a href="https://github.com/nikitha26/tic-tac-toe" target="_blank" style="color: rgb(255, 246, 246);">GITHUB</a>
+                </button>
+              <button class="btn btn-primary">
+                <a href="https://nikitha26.github.io/tic-tac-toe/" target="_blank" style="color: white;">LIVE DEMO</a>
+              </button>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="thumbnail text-center">
+              <!-- <img src="images/clg.png" alt="" height="200" width="200" style="margin-top: -10px;"> -->
+              <h4 class="service__single-section__title" >CREATE NOTE (CRUD Operations)</h4>
+              <ul class="text-justify">
+                <li></li> 
+                <li></li>
+              </ul><hr>
+              <button class="btn btn-danger">
+                <a href="https://github.com/nikitha26/Create-Note" target="_blank" style="color: rgb(255, 246, 246);">GITHUB</a>
+                </button>
+              <button class="btn btn-primary">
+                <a href="https://createnote-nikitha.netlify.app/index.html" target="_blank" style="color: white;">LIVE DEMO</a>
+              </button>
             </div>
           </div>
         </div>
@@ -353,7 +412,7 @@
   <!--Projects Ended  -->
 
   <!-- Education Start -->
-  <section class="service" id="skill">
+  <section class="service mb-5" id="education">
     <div class="container">
       <div class="page-section">
         <h2 class="page-section__title" style="color: white;">MY EDUCATION</h2>
@@ -395,14 +454,15 @@
     </div>
   </section>
 
+  <hr style="border: 0;border-top: 1px solid #525B60;display:block;margin-top: 120px;">
   <footer class="footer footer--bg" id="contact">
     <div class="container text-center">
-     <h2 class="text-center" style="color: black;">Get In Touch</h2>
+     <h1 class="text-center" style="color: black; font-weight: bold;">Get In Touch</h1>
      <img class="page-section__title-style" src="assets/images/title-style.png" alt="">
       <ul class="footer__contact-information">
         <!-- <li><a href="tel:5555555555"><i class="material-icons">phone</i>9999999999 </a></li> -->
-        <li><a href="mailto:sshariar458@gmail.com"><i class="material-icons">email</i> mnikitha365@gmail.com</a></li>
-        <li><a href="#"><i class="material-icons">location_on</i>Hyderabad, Beeramguda</a></li>
+        <li><a href="mailto:mnikitha365@gmail.com" style="font-weight: bold; font-size: large;"><i class="material-icons" style="font-weight: bold;font-size: large;">email</i> mnikitha365@gmail.com</a></li>
+        <li><a href="#" style="font-weight: bold;font-size: large;"><i class="material-icons" style="font-weight: bold;font-size: large;">location_on</i>Hyderabad,Telangana</a></li>
       </ul>
     </div>
     <hr style="border: 0;border-top: 1px solid #525B60;display:block;margin-top: 40px;">
@@ -425,13 +485,21 @@
   <script src="js/mixitup.js"></script>
 
   <script>
+    $(document).ready(function(){
+      $(window).on('scroll','.navbar_scroll',function(){
+        didScroll = true;
+        var scroll = $(window).scrollTop();
+        if (scroll > 500) {
+          $(".navbar_scroll").css("background" , "blue");
+        }
+
+        else{
+          $(".navbar_scroll").css("background" , "#333");  	
+        }
+      })
+    })
+
     
-
-    $('a').click(function(e)
-      {
-        e.preventDefault();
-      });
-
     // calling mixitup
     var mixer = mixitup(".portfolio");
   </script>
